zayatsvasiliy/12.K8s/homework12_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deploy
  labels:
    app: php
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: php:8.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /var/www/html
            - name: ssh-key
              mountPath: /root/.ssh
              readOnly: true
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
      volumes:
        - name: html
          configMap:
            name: php-index
        - name: ssh-key
          secret:
            secretName: root-ssh-key
---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: php-test.k8s-11.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-service
                port:
                  number: 80
